--- a/playshop/src/App.css
+++ b/playshop/src/App.css
@@ -377,7 +377,7 @@ body {
   font-size: 24px;
   font-weight: bold; 
   border-bottom: #67DDAB inset 4px ;
-  background-image: linear-gradient(to bottom, #67DDAB 65%, #67DDAB 10%);
+  background-image: linear-gradient(#67DDAB, #67DDAB);
   background-repeat: no-repeat;
   text-decoration: none;
   transition: background-size 0.2s ease;
