--- a/playshop/src/App.css
+++ b/playshop/src/App.css
@@ -464,6 +464,21 @@ button:active, button:focus {
 
 footer {
   background: white;
-  width: 100%;
-  height: 200px;
+  max-width: 1140px;
+  /* height: 200px; */
+}
+
+footer div {
+  display: inline-block;
+  width: 570px;
+}
+
+footer .certification {
+  height: 100px;
+  position: absolute;
+}
+
+footer img {
+  float: right;
+  height: 100%;
 }
