--- a/playshop/src/App.css
+++ b/playshop/src/App.css
@@ -130,7 +130,8 @@ body {
   z-index: -3;
   left: 0px;
   margin-top: -60px;
-  height: 100%;
+  margin-bottom: 100px;
+  height: 120%;
   width: 100vw;
 
   background-repeat: no-repeat;
@@ -189,18 +190,6 @@ body {
   opacity: 1;
 }
 
-/* .summaryBackground:hover .backPath path {
-  animation-duration: 4s;
-  stroke-dasharray: 25px;
-  stroke-width: 4px;
-
-} */
-
-.summaryBackground:hover path {
-  stroke-width: 4px;
-  /* stroke-linecap: round; */
-}
-
 @keyframes pathSlow {
   100% {
     stroke-dashoffset: -20px;
@@ -210,8 +199,7 @@ body {
 .summary {
   display: inline-block;
   width: 40%; 
-  margin-top: 40px;
-
+  margin-top: 100px;
   opacity: 0;
   transform: translateY(20px);
   transition: transform 1s, opacity 1s;
@@ -243,8 +231,57 @@ body {
   margin-top: 120px;
 }
 
-.workshopCardsContainer p {
+.workshopCardsContainer img {
+  margin: auto;
+  display: block;
+  height: 360px;
+  margin-top: -180px;
+}
+
+.workshopCardsContainer h1 {
+  margin: 70px 20px 100px;
+  text-align: center;
+  font-size: 48px;
+  font-weight: bold;
+}
+
+.workshopCardsContainer h2 {
   font-size: 24px;
+  text-align: center
+}
+
+.qualityCard {
+  display: inline-block;
+  width: 33.3%;
+  padding: 20px;
+  vertical-align: top;
+}
+
+.qualityCard img {
+  /* width: 360px; */
+  margin: auto;
+  max-width: 100%;
+  height: 240px;
+  padding: 30px;
+}
+
+.qualityCard h3 {
+  font-family: serif;
+  font-weight: bold;
+  font-size: 32px;
+  text-align: center;
+  margin: 20px 0;
+}
+
+.qualityCard p {
+  font-size: 18px;
+  text-align: center;
+}
+
+.spacer {
+  display: inline-block;
+  width: 15.15%;
+  height: 100%;
 }
 
 .workshopCard {
