--- a/playshop/src/Contact.css
+++ b/playshop/src/Contact.css
@@ -65,9 +65,25 @@
 
 .formContainer .summaryContainer, .formContainer .form {
     display: inline-block;
-    width: 50%;
+    width: 100%;
     height: 100%;
+    padding: 0 200px;
     /* background: yellow; */
+}
+
+.emailContainer {
+    /* background: #F4F4F4; */
+    padding: 40px 0;
+}
+
+.emailContainer .background {
+    position: absolute;
+    width: 100vw;
+    height: 100%;
+    z-index: -2;
+    left: 0;
+    margin-top: -40px;
+    background: #F4F4F4;
 }
 
 .summaryContainer p {
@@ -96,13 +112,14 @@
 }
 
 ::placeholder {
-    color: #D4D4D4;
+    color: rgb(177, 177, 177);
 }
 
 .form .submitButton {
     width: 300px;
     background: #67DDAB;
     color: white;
-    margin: 40px 0;
+    margin: 40px auto;
     border: none;
+    display: block;
 }
