--- a/playshop/src/App.css
+++ b/playshop/src/App.css
@@ -119,6 +119,14 @@ body {
   background-color: #67DDAB;
 }
 
+.telescope {
+  animation: flip 10s infinite;
+}
+
+.telescope:hover {
+  transform: scale(-1, 1);
+}
+
 /* MARK: Summary Row */
 .summaryRow {
   width: 100%;
@@ -126,7 +134,7 @@ body {
   transition: width 1s ease;
 }
 
-.summaryRow .summaryBackground {
+.summaryBackground {
   position: absolute;
   z-index: -3;
   left: 0px;
@@ -158,7 +166,7 @@ body {
 
 .summaryBackground path {
   fill: none;
-  stroke: white;
+  stroke: red;
   stroke-width: 2px;
   stroke-dasharray: 10px;
   /* animation: pathSlow 5s linear infinite; */
@@ -168,10 +176,46 @@ body {
 .summaryBackground path {
   stroke: white;
   stroke-dasharray: 1740px;
-  stroke-dashoffset: 1740px;
+  stroke-dashoffset: 0px;
   transition: stroke-dashoffset 3s 0.4s, stroke-dasharray 2s 0.4s;
   /* animation: pathSlow 3.2s linear infinite;  */
 }
+
+.inspiration, .workshop {
+  z-index: -10;
+}
+
+.popUp {
+  z-index: -1;
+}
+
+.inspiration svg, .workshop svg, .popUp svg {
+  z-index: -5;
+  margin-left: 0;
+  width: 104%;
+  margin-top: -20%;
+}
+
+.workshop svg {
+  margin-top: -10%;
+}
+
+.inspiration path {
+  stroke: #FF9C1C;
+}
+
+.workshop path {
+  stroke: #67DDAB;
+}
+
+.popUp path {
+  stroke: #8ECCEC;
+}
+
+.inspiration .backPath path, .workshop .backPath path, .popUp .backPath path {
+  stroke: white;
+}
+
 
 .active path {
   stroke-dashoffset: 0px;
@@ -179,8 +223,9 @@ body {
 }
 
 .backPath path {
-  opacity: 0;
+  opacity: 1;
   stroke: #8ECCEC;
+  stroke-width: 4px;
   stroke-dasharray: 10px;
   stroke-dashoffset: 0px;
   transition: opacity 0.2s 0.4s;
@@ -324,10 +369,6 @@ body {
   color: #FF9C1C;
 }
 
-.popUp span {
-  color: #8ECCEC;
-}
-
 .workshopCard .workshopBackground {
   position: absolute;
   z-index: -3;
@@ -376,15 +417,6 @@ body {
 }
 .playWorkshop img {
   padding: 120px;
-}
-
-.popUp svg {
-  top: 300px;
-  min-width: 1700px;
-  width: 100%;
-}
-.popUp path {
-  stroke: #FF9C1C;
 }
 
 .workshopCard .idealForCard {
@@ -502,6 +534,13 @@ button:active, button:focus {
 
 .contactContainer {
   margin-bottom: 70px;
+}
+
+.emailContainer {
+  background-image: linear-gradient(#F4F4F4, #F4F4F4);
+  background-repeat: no-repeat;
+  background-size: 30% 100%;
+  background-position-x: 56%;
 }
 
 footer {
