--- a/playshop/src/Contact.css
+++ b/playshop/src/Contact.css
@@ -109,6 +109,7 @@
     font-weight: bold;
     border: none;
     border-bottom: #2F2F2F solid 1px;
+    background: none;
     transition: color 0.4s, background-color 0.4s, width 0.8s;
 }
 
