--- a/playshop/src/Contact.css
+++ b/playshop/src/Contact.css
@@ -67,7 +67,7 @@
     display: inline-block;
     width: 100%;
     height: 100%;
-    padding: 0 200px;
+    padding: 0 300px;
     /* background: yellow; */
 }
 
@@ -128,6 +128,17 @@
     display: block;
 }
 
+.form h2 {
+    font-size: 48px;
+    font-weight: bold;
+}
+
+.form p {
+    font-size: 24px;
+    text-align: center;
+    margin-bottom: 40px;
+}
+
 .Contact.pending .form .submitButton {
     color: white;
     animation: submitting 1s infinite;
@@ -182,6 +193,30 @@
 
 .Contact.submitted .formContainer {
     /* display: none; */
+}
+
+.form a {
+    color: inherit;
+    border-bottom: black 2px solid;
+    transition: padding 0.1s;
+}
+
+.form a:hover {
+    /* opacity: 0.5; */
+    text-decoration: none;
+    color: #8eccec;
+    border-color: #67DDAB;
+    padding-bottom: 3px;
+    animation: greenStart 0.8s infinite;
+}
+
+.Contact h2, .Contact p {
+    transition: opacity 1s 0s, transform 1s 0s;
+}
+
+.Contact.submitted h2, .Contact.submitted p {
+    transform: translateY(-20px);
+    opacity: 0;
 }
 
 .Contact.submitted input {
