--- a/playshop/src/Header.css
+++ b/playshop/src/Header.css
@@ -1,4 +1,11 @@
+.pre-mounted .App-header {
+    transform: translateY(-200px);
+    opacity: 0;
+}
+
 .App-header {
+    transition: transform 0.6s 0.4s, opacity 0.5s 0.4s;
+    opacity: 1;
     position: relative;
     padding: 9px 24px;
     flex-direction: column;
