--- a/playshop/src/Contact.css
+++ b/playshop/src/Contact.css
@@ -238,12 +238,13 @@
 }
 
 .sentContainer img {
-    margin-top: 0;
+    margin-top: 100px;
     height: 300px;
 }
 
 .sentContainer h1 {
-    /* font-family: serif; */
+    font-family: inherit;
+    text-align: center;
     font-size: 24px;
     transform: translateY(-100px) scale(0.8);
     transition: transform 0.6s 0.8s;
