--- a/playshop/src/Mobile.css
+++ b/playshop/src/Mobile.css
@@ -1,7 +1,7 @@
 @media only screen and (max-width: 777px) {
     .top {
         overflow-x: hidden;
-        position: absolute;
+        /* position: absolute; */
       }
       
     ::-webkit-scrollbar {
